Fix color contrast on navbar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,6 +32,10 @@ h1 {
     color: #fff;
 }
 
+.white-text {
+    color: #fff;
+}
+
 /* products page */
 .product-header {
     background-color: #FBEAFF;
